<resources>
    <string name="app_name">Giggiddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="need_help">Need Help?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up">Not a member? Sign up.</string>
    <string name="register">Register</string>
    <string name="member_login">Already a Member? Login here</string>
    <string name="btn_register">Register</string>
    <string name="app_label">Gigiddy</string>
    <string name="settings_username">username</string>
    <string name="status_hint">Hey I am online...</string>
    <string name="button_update">Update</string>
    <string name="settings_btn_home">Home</string>
    <string name="phone_num_hint">Enter your phone number here....</string>
    <string name="verification_code_hint">Write verification code here...</string>
    <string name="send_verification_btn">Send Verification</string>
    <string name="verify_btn">Verify</string>
    <string name="crop_image">Crop Image</string>
    <string name="select_image">Select Image</string>
    <string name="save_image">Save Image &amp; Return</string>
    <string name="btn_back">Home</string>
    <string name="username_placeholder">username</string>
    <string name="user_status_placeholder">user status</string>
    <string name="send_message_request_btn">Send Friend Request</string>
    <string name="cancel_chat_request">Cancel Friend Request</string>
    <string name="member">Select Member</string>
    <string name="new_group">New Group</string>
    <string name="set_dates">Set Dates</string>
    <string name="accept_btn">Accept</string>
    <string name="cancel_btn">Cancel</string>
    <string name="chat_btn">Chat</string>
    <string name="user_status">user status</string>
    <string name="user_name">user name</string>
    <string name="welcome_to_gigiddy">Welcome to Gigiddy</string>
    <string name="username_placeh">username_placeholder</string>
    <string name="sender_messages_here">sender messages here</string>
    <string name="username_here">username here</string>
    <string name="date_and_time">date and time</string>
    <string name="sender_message_go_here">sender message go here</string>
    <string name="say_something">Say something...</string>
    <string name="click_image_to_set_profile_image">Click image to set Profile Image</string>
    <string name="receiver_messages_here">receiver messages here</string>
    <string name="instructions">Instructions</string>
    <string name="swipe_right_and_left">- Swipe right and left to see Chat, Roster, and Members in your group</string>
    <string name="click_three_dots">- Click three dots in right hand corner to Logout, Find Friends, check Friend Requests, and change Profile info</string>
    <string name="display_user_name">display user name</string>
    <string name="find_friends">Find Friends</string>
    <string name="check_requests">Check Requests</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
</resources>
