<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetProfileImage">

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/CropImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:layout_weight="7"
        android:elevation="20dp"
        app:cropAspectRatioX="1"
        app:cropAspectRatioY="1"
        app:cropGuidelines="on"
        app:cropScaleType="fitCenter" />


    <Button
        android:id="@+id/select_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0.33"
        android:onClick="onLoadImageClick"
        android:text="@string/select_image"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/crop_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0.33"
        android:onClick="onCropImageClick"
        android:text="@string/crop_image"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/save_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="false"
        android:text="@string/save_image"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="invisible" />


</LinearLayout>