<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <include
        android:id="@+id/setting_app_bar"
        layout="@layout/chat_bar_layout"
        android:visibility="invisible"
        ></include>

    <TextView
        android:id="@+id/click_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_image"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="Click image to set Profile Image"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_below="@+id/setting_app_bar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:elevation="20dp"/>

    <EditText
        android:id="@+id/set_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_image"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/edit_profile"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:elevation="20dp"
        android:hint="@string/settings_username"
        android:padding="6dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/set_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_username"
        android:inputType="textMultiLine"
        android:hint="@string/status_hint"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_status"
        android:background="@drawable/rectangle"
        android:elevation="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/update_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_status"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorToolbar"
        android:padding="6dp"
        android:text="@string/button_update"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        android:enabled="false"/>

</RelativeLayout>